# object-oriented-design-solid

./: .gitignore  README.md  pyproject.toml
exercises/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py
object_oriented_design/: constructors.py  named_constructors.py  primitive_obsession.py
solid/: dependency_inversion_principle_after.py  dependency_inversion_principle_before.py  interface_segregation_principle_after.py  interface_segregation_principle_before.py  liskov_substitution_principle_after.py  liskov_substitution_principle_before.py  open_closed_principle_after.py  open_closed_principle_before.py  single_responsibility_principle_after.py  single_responsibility_principle_before.py
tests/: test_area.py  test_color.py  test_exercise1.py  test_exercise4.py  test_position.py
