[tool.poetry]
name = "object-oriented-design"
version = "0.1.0"
description = ""
authors = ["luru <luru@eventbrite.com>"]
readme = "README.md"
packages = [{include = "object_oriented_design"}]

[tool.poetry.dependencies]
python = "^3.9"
haversine = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
srp = "solid.single_responsibility_principle_after:main"
lsp = "solid.liskov_substitution_principle_before:main"
lsp2 = "solid.liskov_substitution_principle_after:main"
